fix cell sizing on narrow screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -405,7 +405,7 @@ body {
 
 @media only screen and (max-width: 800px) {
   :root {
-    --puzzle-cell-size: calc(100vw / var(--puzzle-column-count) - 2 * var(--puzzle-cell-spacing));
+    --puzzle-cell-size: calc(100vw / var(--puzzle-column-count) - var(--puzzle-cell-spacing));
   }
 
   .root {
